<resources>
    <string name="app_name">Shoo Shoe</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Samsung Shoe Shoo</string>
    <string name="nav_header_subtitle">Isaac Marcus Lam</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_favourites">Favourites</string>
    <string name="menu_sneakers">Sneakers</string>
    <string name="menu_formal">Formal</string>
    <string name="menu_slippers">Slippers</string>
    <string name="menu_sandals">Sandals</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="empty_title">Hey, we\'ve noticed you haven\'t put any shoes in the Shoo Shoe smart shelf!</string>
    <string name="empty_desc">Go ahead and try placing a shoe on the loading tray, then pull down to refresh!</string>
    <string name="disc_title">We can\'t connect to Shoo Shoe shelf! </string>
    <string name="disc_desc">Check that Shoo Shoe is powered up and that you\'re connected as well!</string>
</resources>
