<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_favourites"
            android:icon="@mipmap/favourites_icon"
            android:title="@string/menu_favourites"
            />
        <item
            android:id="@+id/nav_sneakers"
            android:icon="@mipmap/sneaker_icon"
            android:title="@string/menu_sneakers" />
        <item
            android:id="@+id/nav_formal"
            android:icon="@mipmap/formal_icon"
            android:title="@string/menu_formal" />
        <item
            android:id="@+id/nav_slippers"
            android:icon="@mipmap/slipper_icon"
            android:title="@string/menu_slippers" />
        <item
            android:id="@+id/nav_sandals"
            android:icon="@mipmap/sandal_icon"
            android:title="@string/menu_sandals" />
    </group>

    <!--<item android:title="Social Media">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/nav_share"-->
                <!--android:icon="@drawable/ic_menu_share"-->
                <!--android:title="@string/menu_share" />-->
            <!--<item-->
                <!--android:id="@+id/nav_send"-->
                <!--android:icon="@drawable/ic_menu_send"-->
                <!--android:title="@string/menu_send" />-->
        <!--</menu>-->
    <!--</item>-->

</menu>
